--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "-": "^0.0.1",
     "axios": "^1.13.4",
     "body-parser": "^2.2.2",
+    "dotenv": "^17.2.4",
     "ejs": "^4.0.1",
     "express": "^5.2.1",
     "pg": "^8.18.0"
